--- a/ini/dyos.ini
+++ b/ini/dyos.ini
@@ -39,6 +39,12 @@ set.see.ent=0
 set.see.num=0
 set.att.ent=0
 set.att.num=0
+set.att.x=0
+set.att.y=0
+set.att.z=0
+set.att.a=0
+set.att.b=0
+set.att.c=0
 set.filter=0
 set.opacity=0
 set.stagger=0
