mira el historial de cambios
• **Cambios;**
  * Nuevo formato en los archivos de guardado.
    - Este ya no es compatible con el antiguo formato, asi que al cargar un escenario viejo, no se recuperara toda la informacion.

• **Agregados;**
  * Poder guardar y cargador las animaciones DYOM puestas en los actores.
    - Proximamente se estara añadiendo soporte para las anims. de todas las demas secciones.
  * Visualizador de nivel de estrellas en Android.
  * 4 Interiores nuevos.
    - 3 Estacionamientos de Comisarias
    - 1 Casa de Ballas

• **Reparaciones;**
  * Los actores se cargan mal de las escenas guardadas.
  * El ajuste de la vida maxima del jugador, reiniciaba la vida actual y hacia posible la muerte del mismo.
    - Ahora ya no se reinicia el numero, aunque muestra un bug con el numero maximo de vida(255) que se visualiza como 254.
    - Fuera del bug, el control funciona bien.
  * En la nueva interfaz de Android, el marcador de vida y armadura se superponen una adelante de la otra.
  * El visualizador de coords.Z del menu, mostraba un punto extra de error estando de pie.

--- a/ini/dyos.a.ini
+++ b/ini/dyos.a.ini
@@ -1,69 +1,23 @@
 [ACTOR1]
-model=0
-pedtype=4
-solid=0
-pos.x=200.521
-pos.y=-35.7161
-pos.z=1001.3
-angle=35.6288
-attach=0
-inmune=0
-health=100
-armour=0
-weapon=808464461
-acuracy=4468784
-visible=1
-ifp.file=-1
-ifp.anim=-1
-sty.fight=-1
-sty.walk=-1
-special=-1038254604
-att.x=0
-att.y=0
-att.z=0
-[ACTOR2]
+special=0
 model=7
-pedtype=4
-solid=0
-pos.x=199.493
-pos.y=-33.9221
-pos.z=1001.3
-angle=182.828
-attach=0
-inmune=0
-health=100
+type=4
+gcoord.x=0.0
+gcoord.y=0.0
+gcoord.z=0.0
+gcoord.a=0.0
+lcoord.x=0.0
+lcoord.y=0.0
+lcoord.z=0.0
+lcoord.a=0.0
+props=0
+health=0
 armour=0
-weapon=808464461
-acuracy=4468784
-visible=0
-ifp.file=-1
-ifp.anim=-1
-sty.fight=-1
-sty.walk=-1
-special=-1038254604
-att.x=0
-att.y=0
-att.z=0
-[ACTOR3]
-model=10
-pedtype=4
-solid=1
-pos.x=197.846
-pos.y=-37.6661
-pos.z=1000.8
-angle=161.626
-attach=0
-inmune=0
-health=100
-armour=0
-weapon=808464461
-acuracy=4468784
-visible=1
-ifp.file=-1
-ifp.anim=-1
-sty.fight=-1
-sty.walk=-1
-special=-1038254604
-att.x=0
-att.y=0
-att.z=0
+weapon=0
+acu.mlle=0
+acu.wpon=0
+acu.dist=0
+ifp.file=0
+ifp.anim=0
+sty.fght=0
+sty.walk=0
